<resources>
  <string name="app_name">Diet Decoder</string>
  <string name="action_settings">Settings</string>
  <string name="action_go_home">Go Home</string>
  <string name="action_more">More</string>
  <string name="button_save">Save</string>
  <string name="button_cancel">Cancel</string>
  <string name="nothing_changed_not_saved">Nothing changed, returning without saving...</string>
  <string name="change_date_time">Let\'s go change the date/time...</string>
  <string name="change_symptom">Let\'s go change the symptom...</string>
  <string name="change_intensity">Let\'s go change the intensity of the symptom...</string>
  <string name="change_ingredient">Off to change the ingredient!</string>
  <string name="change_amount">Off to set amount of ingredient consumed!</string>
  <string name="button_symptom_log">Symptom Log</string>
  <string name="textview_title_new_symptom_log">Log a Symptom</string>
  <string name="edittext_new_symptom_intensity">Intensity of Symptom Here</string>
  <string name="textview_main_log_a_symptom">Log a Symptom</string>
  <string name="button_current_symptom">Current Symptom</string>
  <string name="textview_title_new_recipe_log">Log a Recipe</string>
  <string name="textview_title_new_ingredient_log">Log Ingredient</string>
  <string name="button_food_log">Food Log</string>
  <string name="button_ingredient_log">Diet Log</string>
  <string name="button_save_new_ingredient">Save New Ingredient</string>
  <string name="button_save_edit_recipe">Save Ingredient</string>
  <string name="button_export_activity">Export Database</string>
  <string name="button_other_activity">Other</string>
  <string name="button_export_csv">CSV</string>
  <string name="button_export_pdf">PDF</string>
  <string name="textview_title_export">Export as...</string>
  <string name="button_back">Go Back</string>
  <string name="empty_not_updated">Not Updated, invalid values</string>
  <string name="textview_new_log_ingredient_name">Name of Ingredient</string>
  <string name="textview_new_log_ingredient_brand">Brand of ingredient</string>
  <string name="title_textview_new_log_ingredient_date">Date Time Consumed</string>
  <string name="title_log">Record Log</string>
  <string name="title_log_change">Record Log For End</string>
  <string name="title_log_begin">Record Log For Begin</string>
  <string name="title_log_consumed">Record When Consumed</string>
  <string name="title_log_cooked">Record When Cooked</string>
  <string name="title_log_acquired">Record When Acquired</string>
  <string name="title_textview_ingredient_amount_log">Record Amount</string>
  <string name="search_here">Search here...</string>
  <string name="textview_24hr">(24 hour time)</string>
  <string name="pick_time">Pick Time</string>
  <string name="question_textview_ingredient_amount_log">How much of the ingredient was it?</string>
  <string name="question_textview_new_symptom_intensity_log">How intense is the symptom?</string>
  <string name="question_textview_new_symptom_log_begin_time">When did the symptom start?</string>
  <string name="question_textview_new_ingredient_log_consumed_time">When did the ingredient get consumed/eaten/drank?</string>
  <string name="question_textview_new_symptom_log_changed_time">When did the symptom end?</string>
  <string name="question_textview_new_ingredient_log_cooked_time">When did the ingredient get cooked/prepared/preserved?</string>
  <string name="question_textview_new_ingredient_log_acquired_time">When did the ingredient get acquired/harvested/bought?</string>
  <string name="almost_nothing">almost nothing</string>
  <string name="tiny">tiny</string>
  <string name="a_bit">a bit</string>
  <string name="a_good_bit">a good bit</string>
  <string name="quite_a_bit">quite a bit</string>
  <string name="a_lot">a lot</string>
  <string name="tons">tons</string>
  <string name="title_textview_ingredient">Ingredients</string>
  <string name="title_textview_symptom">Symptoms</string>
  <string name="title_textview_edit_symptom">Edit Symptom</string>
  <string name="title_textview_add_symptom">Add Symptom</string>
  <string name="title_textview_addedit_symptom">Symptom</string>
  <string name="symptom_category">Symptom Category:</string>
  <string name="symptom_description">Symptom Description:</string>
  <string name="enter_symptom_edittext_name">Enter name here</string>
  <string name="enter_symptom_edittext_description">Enter description here</string>
  <string name="enter_symptom_edittext_category">Enter category here</string>
  <string name="symptom_trackornot">Ask about this symptom</string>
  <string name="title_symptom_trackornot">Track Symptom</string>
  <string name="enter_ingredient_edittext_brand">Enter brand here</string>
  <string name="all_symptoms">All Symptoms</string>
  <string name="all_ingredients">All Ingredients</string>
  <string name="question_textview_new_log">What general time range are we concerned with?</string>
  <string name="button_just_now">Just Now</string>
  <string name="button_earlier_today">Earlier Today</string>
  <string name="button_yesterday">Yesterday</string>
  <string name="button_another_date">Another date...</string>
  <string name="saving">Saving... </string>
  <string name="deleting">Deleting... </string>
  <string name="updating">Updating... </string>
  <string name="cancelling">Cancelling... </string>
  <string name="adding">Adding... </string>
  <string name="question_textview_new_ingredient_log_ingredient_name">What was the ingredient?</string>
  <string name="question_textview_new_ingredient_log_ingredient_brand">What was the brand? (Homemade is an option)</string>
  <string name="question_textview_new_ingredient_log_add_another">Add another ingredient?</string>
  <string name="textview_question_log_part_of_day_specific_time_range">Estimated part of the day?</string>
  <string name="button_early">Early</string>
  <string name="button_midnight">Middle of the night</string>
  <string name="button_afternoon">Afternoon</string>
  <string name="button_evening">Evening</string>
  <string name="button_midday">Midday</string>
  <string name="button_specific_time">More Specific Time</string>
  <string name="button_all_day">All Day</string>
  <string name="toast_more_specific_time">Time to pick a more specific time then!</string>
  <string name="toast_just_now">Just now it is</string>
  <string name="toast_earlier_today">Then let\'s go with a random earlier time</string>
  <string name="toast_yesterday">Yesterday… what time?</string>
  <string name="toast_another_date">Another date, so let\'s select when…</string>
  <string name="toast_part_of_day_early">Early bird gets the worm!</string>
  <string name="toast_part_of_day_midday">Midday it is!</string>
  <string name="toast_part_of_day_afternoon">Afternoon it shall be</string>
  <string name="toast_part_of_day_evening">Evening has been chosen</string>
  <string name="toast_part_of_day_midnight">Midnight, gotcha!</string>
  <string name="toast_part_of_day_all_day">All day, huh? Ouch.</string>
  <string name="textview_colon">:</string>
  <string name="textview_slash">/</string>
  <string name="home_fragment_label">Home</string>
  <string name="textview_main_title">Go To</string>
  <string name="button_ingredient_activity">Ingredients</string>
  <string name="button_recipe_activity">Recipes</string>
  <string name="button_symptom_activity">Symptoms</string>
  <string name="button_allergen_activity">Allergens</string>
  <string name="button_log_activity">Logs</string>
  <string name="title_textview_addedit_ingredient">Ingredient</string>
  <string name="title_textview_edit_ingredient">Edit Ingredient</string>
  <string name="title_textview_add_ingredient">Add Ingredient</string>
  <string name="enter_ingredient_edittext_name">Type Ingredient Name Here</string>
  <string name="empty_not_saved">Not saved because it is empty.</string>
  <string name="too_many_selected_not_saved">Not saved because too many were selected.</string>
  <string name="wrong_place_lets_go_home">Error on page, let\'s go home and try again. Report this bug please.</string>
  <string name="heads_up_all_times_same">All times for symptoms will be set to be the same; if you want to set any single symptom different, use the edit button in the list of logs.</string>
  <string name="invalid_input_not_int_between_one_and_ten_try_again">Not saved because it is invalid input, not a number between 1 and 10. Try again.</string>
  <string name="title_edit_ingredient_textview">Enter New Values</string>
  <string name="enter_new_ingredient_edittext_name">Fixed Ingredient Name Here</string>
  <string name="enter_new_ingredient_edittext_concern">Fixed Concern Here</string>
  <string name="enter_old_ingredient_edittext_name">Old Ingredient Name to Edit Here</string>
  <string name="enter_old_ingredient_edittext_concern">Old Ingredient Concern to Edit Here</string>
  <string name="empty_not_deleted">Ingredient not deleted because given value is empty.</string>
  <string name="edittext_ingredient_concern_to_delete">Type Concern of Ingredient to Delete Here</string>
  <string name="edittext_ingredient_name_to_delete">Enter Name of Ingredient to Delete Here</string>
  <string name="textview_title_delete">Delete Ingredient</string>
  <string name="button_delete">Delete Ingredient</string>
  <string name="value_not_found_not_deleted">Ingredient not Deleted, Value not Found</string>
  <string name="title_textview_detail">Details</string>
  <string name="button_edit">Edit</string>
  <string name="title_edit_recipe_textview">Enter old and new values for Recipe</string>
  <string name="enter_new_recipe_edittext_name">Fixed Recipe Name Here</string>
  <string name="enter_new_recipe_edittext_ingredient">Fixed Ingredient Here</string>
  <string name="enter_old_recipe_edittext_name">Old Recipe Name to Edit Here</string>
  <string name="enter_old_recipe_edittext_ingredient">Old Recipe Ingredients to Edit Here</string>
  <string name="title_textview_new_recipe">New Recipe</string>
  <string name="enter_recipe_edittext_name">Type Recipe Name Here</string>
  <string name="enter_recipe_edittext_ingredient">Ingredients in Recipe Here</string>
  <string name="enter_recipe_edittext_category">Category of Recipe Here</string>
  <string name="empty_recipe_not_saved">Recipe not saved because it is empty.</string>
  <string name="textview_title_recipe">Recipes</string>
  <string name="textview_title_ingredient">Ingredients</string>
  <string name="textview_title_log">Logs</string>
  <string name="textview_subtitle_food">Food</string>
  <string name="textview_subtitle_drink">Drinks</string>
    <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="detail">Details</string>
  <string name="duplicate">Duplicate</string>
  <string name="title_symptom_detail_textview">Details of Symptom</string>
  <string name="symptom_detail_name_textview">Name</string>
  <string name="ingredient_detail_name_textview">Name</string>
  <string name="symptom_detail_category_textview">Category</string>
  <string name="symptom_detail_description_textview">Description</string>
  <string name="symptom_detail_suffertype_textview">Type</string>
  <string name="textview_title_symptom">Symptoms</string>
  <string name="title_textview_new_log">New Log</string>
  <string name="title_textview_edit_log">Edit Log</string>
  <string name="button_save_new_log">Save Log</string>
  <string name="edittext_new_log_ingredient_name">Ingredient Name</string>
  <string name="edittext_new_log_ingredient_brand">Brand Name</string>
  <string name="title_log_detail_textview">Detail Log</string>
  <string name="button_save_and_add_another">Save and Add Another Ingredient</string>
  <string name="ingredient_name">Ingredient Name:</string>
  <string name="what_brand">Ingredient Brand:</string>
  <string name="how_much_amount">Subjective Amount:</string>
  <string name="when_consumed">When Consumed/Drank/Ate:</string>
</resources>