<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/textview_edit_recipe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_padding"
    android:text="@string/title_edit_recipe_textview"
    android:textAlignment="center"
    android:textAppearance="@style/textview_title"
    android:textStyle="bold"
    android:layout_gravity="center_horizontal"    />


  <EditText
    android:id="@+id/edittext_old_recipe_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_padding"
    android:hint="@string/enter_old_recipe_edittext_name"
    android:textAppearance="@style/edittext" />

  <EditText
    android:id="@+id/edittext_old_recipe_ingredient"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="@style/edittext"
    android:layout_margin="@dimen/big_padding"
    android:hint="@string/enter_old_recipe_edittext_ingredient"/>
  <EditText
    android:id="@+id/edittext_new_recipe_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_padding"
    android:hint="@string/enter_new_recipe_edittext_name"
    android:textAppearance="@style/edittext" />

  <EditText
    android:id="@+id/edittext_new_recipe_ingredient"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="@style/edittext"
    android:layout_margin="@dimen/big_padding"
    android:hint="@string/enter_new_recipe_edittext_ingredient"/>

  <Button
    android:id="@+id/button_save_edit_recipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green_500"
    android:text="@string/button_save"
    android:layout_margin="@dimen/big_padding"
    android:textColor="@color/button_label" />

</LinearLayout>

