<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraintLayout_log_date_time_choices"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
      android:id="@+id/textview_title_log_date_time_choices_time_fragment"
      android:text="@string/title_textview_new_log"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textAlignment="center"
      android:textAppearance="@style/textview_title"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      android:id="@+id/textview_question_log_part_of_day_specific_time_range"
      android:text="@string/textview_question_log_part_of_day_specific_time_range"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textAlignment="center"
      android:textAppearance="@style/textview_main_content"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textview_title_log_date_time_choices_time_fragment"/>

  <Button
      android:id="@+id/button_log_part_of_day_early"
      android:text="@string/button_early"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/textview_question_log_part_of_day_specific_time_range"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
  <Button
      android:id="@+id/button_log_part_of_day_midday"
      android:text="@string/button_midday"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/button_log_part_of_day_early"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <Button
      android:id="@+id/button_log_part_of_day_afternoon"
      android:text="@string/button_afternoon"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/button_log_part_of_day_midday"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
  <Button
      android:id="@+id/button_log_part_of_day_evening"
      android:text="@string/button_evening"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/button_log_part_of_day_afternoon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
  <Button
  android:id="@+id/button_log_part_of_day_midnight"
  android:text="@string/button_midnight"
  android:background="@color/green_500"
  android:textColor="@color/button_label"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/small_padding"
  app:layout_constraintTop_toBottomOf="@+id/button_log_part_of_day_evening"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintStart_toStartOf="parent"/>

  <Button
      android:id="@+id/button_log_part_of_day_more_specific_time"
      android:text="@string/button_specific_time"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/button_log_part_of_day_midnight"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <Button
      android:id="@+id/button_log_part_of_day_all_day"
      android:text="@string/button_all_day"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/button_log_part_of_day_more_specific_time"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
