<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraintLayout_log_date_time_choices"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
      android:id="@+id/textview_title_log_date_time_choices_time_fragment"
      android:text="@string/title_textview_new_log"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textAlignment="center"
      android:textAppearance="@style/textview_title"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      android:id="@+id/textview_question_log_date_time_choices_time"
      android:text="@string/question_textview_new_log"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textAlignment="center"
      android:textAppearance="@style/textview_main_content"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textview_title_log_date_time_choices_time_fragment"/>

  <Button
      android:id="@+id/button_log_date_time_choices_just_now"
      android:text="@string/button_just_now"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/textview_question_log_date_time_choices_time"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
  <Button
      android:id="@+id/button_log_date_time_choices_earlier_today"
      android:text="@string/button_earlier_today"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/button_log_date_time_choices_just_now"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <Button
      android:id="@+id/button_log_date_time_choices_yesterday"
      android:text="@string/button_yesterday"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/button_log_date_time_choices_earlier_today"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
  <Button
      android:id="@+id/button_log_date_time_choices_another_date"
      android:text="@string/button_another_date"
      android:background="@color/green_500"
      android:textColor="@color/button_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_padding"
      app:layout_constraintTop_toBottomOf="@+id/button_log_date_time_choices_yesterday"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
