<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/textview_title_new_log"
    android:text="@string/title_textview_new_log"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_padding"
    android:textAlignment="center"
    android:textAppearance="@style/textview_title"
    android:textStyle="bold"
    android:layout_gravity="center_horizontal"    />



  <EditText
    android:id="@+id/edittext_new_log_ingredient_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="@style/edittext"
    android:layout_margin="@dimen/big_padding"
    android:hint="@string/edittext_new_log_ingredient_name"/>


  <EditText
    android:id="@+id/edittext_new_log_datetime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_padding"
    android:textAppearance="@style/edittext" />
  <Button
    android:id="@+id/button_save_new_log"
    android:text="@string/button_save_new_log"
    android:background="@color/green_500"
    android:textColor="@color/button_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>


</LinearLayout>
