<LinearLayout
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".activity.MainActivity"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/my_toolbar_other"
      android:layout_width="match_parent"
      app:titleTextColor="@color/button_label"
      android:layout_height="?attr/actionBarSize"
      app:menu="@menu/menu_main"
      android:background="?attr/colorPrimary"
      android:elevation="4dp"
      android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
      app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>
  <TextView
    android:id="@+id/textview_main_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_padding"
    android:text="@string/textview_main_title"
    android:textAppearance="@style/textview_title"
    android:textStyle="bold"
    android:layout_gravity="center"    />


  <Button
    android:id="@+id/button_export"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
      android:layout_margin="@dimen/big_padding"
      android:padding="@dimen/medium_padding"
      android:text="@string/button_export_activity"
      android:textAppearance="@style/button_main"
      />

  <Button
    android:id="@+id/button_ingredient"
      android:padding="@dimen/medium_padding"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
      android:textAppearance="@style/button_main"
    android:text="@string/button_ingredient_activity"
    android:layout_margin="@dimen/big_padding"
    android:layout_gravity="center" />

  <Button
    android:id="@+id/button_recipe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
      android:textAppearance="@style/button_main"
    android:text="@string/button_recipe_activity"
    android:layout_margin="@dimen/big_padding"
      android:padding="@dimen/medium_padding"
    android:layout_gravity="center" />

  <Button
    android:id="@+id/button_symptom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_symptom_activity"
    android:layout_margin="@dimen/big_padding"
      android:padding="@dimen/medium_padding"
      android:textAppearance="@style/button_main"
    android:layout_gravity="center" />

<!--  <Button-->
<!--    android:id="@+id/button_allergen"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_gravity="center"-->
<!--    android:layout_margin="@dimen/big_padding"-->
<!--      android:padding="@dimen/medium_padding"-->
<!--      android:textAppearance="@style/button_main"-->
<!--    android:text="@string/button_allergen_activity"/>-->


</LinearLayout>
