<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/textview_title_edit_ingredient"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_padding"
    android:text="@string/title_edit_ingredient_textview"
    android:textAlignment="center"
    android:textAppearance="@style/textview_title"
    android:layout_gravity="center_horizontal"    />


  <TextView
    android:id="@+id/textview_old_ingredient_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Old name"
    android:background="@color/green_200"
    android:padding="@dimen/small_padding"
    android:textAppearance="@style/textview_edit_old_values"
    android:layout_marginLeft="@dimen/big_padding"
    android:layout_marginTop="@dimen/big_padding" />

  <EditText
    android:id="@+id/edittext_new_ingredient_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/big_padding"
    android:layout_marginBottom="@dimen/big_padding"
    android:hint="@string/enter_new_ingredient_edittext_name"
    android:textAppearance="@style/edittext" />

  <TextView
    android:id="@+id/textview_old_ingredient_concern"
    android:layout_width="wrap_content"
    android:text="Old concern"
    android:layout_height="wrap_content"
    android:textAppearance="@style/textview_edit_old_values"
    android:layout_marginLeft="@dimen/big_padding"
    android:background="@color/green_200"
    android:padding="@dimen/small_padding"
    android:layout_marginTop="@dimen/big_padding"/>


  <EditText
    android:id="@+id/edittext_new_ingredient_concern"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="@style/edittext"
    android:layout_marginLeft="@dimen/big_padding"
    android:layout_marginBottom="@dimen/big_padding"
    android:hint="@string/enter_new_ingredient_edittext_concern"/>

  <Button
    android:id="@+id/button_edit_ingredient_save"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green_500"
    android:text="@string/button_save"
    android:layout_margin="@dimen/big_padding"
    android:textColor="@color/button_label" />

</LinearLayout>

